# kecc-c

./: '  .gitignore  .gitmodules  CMakeLists.txt  output.txt
cmake/: AdaptLITConfig.cmake  AddKeccDriver.cmake  kecc-driver-template.cpp.in
include/: CMakeLists.txt
include/ir/: Block.h  Context.h  IR.h  IRTypes.h  Instructions.h  Operand.h  Types.h
include/kecc/asm/: Asm.h  AsmBuilder.h  AsmInstruction.h  Register.h  RegisterParser.h
include/kecc/c/: Clang.h  Diag.h  IRGenerator.h  ParseAST.h  TypeConverter.h  Visitor.h
include/kecc/driver/: Action.h  CMakeLists.txt  Compilation.h  DriverConfig.h.in
include/kecc/ir/: Analysis.h  Attribute.h  Block.h  Context.h  IR.h  IRAnalyses.h  IRAttributes.h  IRBuilder.h  IRInstructions.h  IRTransforms.h  IRTypes.h  Instruction.h  Interface.h  Interpreter.h  InterpreterValue.h  JumpArg.h  Module.h  Pass.h  PatternMatch.h  Type.h  TypeAttributeSupport.h  TypeConcepts.h  TypeWalk.h  Value.h  WalkSupport.h
include/kecc/parser/: Lexer.h  Parser.h  ParserDiag.def  Tokens.def
include/kecc/translate/: FunctionStack.h  IRTranslater.h  InterferenceGraph.h  IntermediateInsts.h  LiveRange.h  LiveRangeAnalyses.h  MoveSchedule.h  RegisterAllocation.h  SpillAnalysis.h  SpillCost.h  TranslateConstants.h  TranslateContext.h  TranslatePasses.h
include/kecc/utils/: Diag.h  LLVM.h  List.h  LogicalResult.h  MLIR.h  PointerCastBase.h  TypeTraits.h
include/parser/: lexer.h  parser.h
include/utils/: List.h  TypeId.h
lib/: CMakeLists.txt
lib/asm/: Asm.cpp  AsmInstruction.cpp  CMakeLists.txt  Register.cpp  RegisterParser.cpp
lib/c/: CMakeLists.txt  IRGenerator.cpp  ParseAST.cpp  TypeConverter.cpp
lib/driver/: Action.cpp  CMakeLists.txt  Compilation.cpp
lib/ir/: Attribute.cpp  Block.cpp  CMakeLists.txt  Context.cpp  IR.cpp  IRAttributes.cpp  IRBuilder.cpp  IRInstructions.cpp  IRTypes.cpp  Instruction.cpp  Interpreter.cpp  InterpreterValue.cpp  JumpArg.cpp  Module.cpp  Pass.cpp  PatternMatch.cpp  Type.cpp  TypeWalk.cpp  Value.cpp
lib/ir/Analyses/: CMakeLists.txt  DominanceAnalysis.cpp  LiveRangeAnalysis.cpp  LivenessAnalysis.cpp  LoopAnalysis.cpp  StructSizeAnalysis.cpp  VisitOrderAnalysis.cpp
lib/ir/Passes/: CMakeLists.txt  CanonicalizeConstantPass.cpp  CanonicalizeStruct.cpp  ConversionToCopy.cpp  CreateFunctionArgument.cpp  DeadCode.cpp  GVN.cpp  InlineCall.cpp  InstructionFold.cpp  Mem2Reg.cpp  OutlineConstant.cpp  OutlineMultipleResults.cpp  SimplifyCFG.cpp
lib/parser/: CMakeLists.txt  Lexer.cpp  Parser.cpp
lib/translate/: CMakeLists.txt  CallLivenessAnalysis.cpp  DefaultTranslationRules.cpp  FunctionStack.cpp  IRTranslater.cpp  InterferenceGraph.cpp  IntermediateInsts.cpp  LiveRangeAnalysis.cpp  LivenessAnalysis.cpp  RegisterAllocation.cpp  SpillAnalysis.cpp  SpillCost.cpp  TranslateContext.cpp  TranslatePasses.cpp
lib/translate/Passes/: CMakeLists.txt  ConversionToCopy.cpp  InlineMemoryInst.cpp
lib/translate/TranslationRules/: BinaryTranslation.cpp  CMakeLists.txt  CallTranslation.cpp  ConstantTranslation.cpp  ExitTranslation.cpp  MemoryInstTranslation.cpp  TranslateInstruction.cpp  TypeCastTranslation.cpp  UnaryTranslation.cpp
test/: CMakeLists.txt
test/fuzz/: CMakeLists.txt  FuzzConfig.h.in  fuzz-test.cpp  reduce-criteria-template.sh  succeed_fuzz_scripts.sh.in
test/lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/lit/AnalysisTests/: call-liveness.ir  call-liveness2.ir  domtree.ir  liveness.ir  liverange.ir  loop.ir
test/lit/AsmTests/: big_arguments.ir  big_arguments2.ir  big_parameters.ir  big_parameters_int_float_mix.ir  execute_test.ir  global_struct.ir  global_struct2.ir  global_struct3.ir  global_struct4.ir  global_variable.ir  global_variable2.ir  load_big_ints.ir  load_float.ir  load_small_ints.ir  main.ir  multiple_return.ir  simple_asm.ir  struct_function.ir  two_return_value.ir
test/lit/AsmTests/float/: add.ir  div.ir  eq.ir  ge.ir  gt.ir  le.ir  lt.ir  mul.ir  ne.ir  sub.ir
test/lit/Examples/: alignof.ir  array.ir  array3.ir  bar.ir  bitwise.ir  cmp.ir  complement.ir  cond.ir  cond_and_loop.ir  fib3.ir  fib4.ir  float2.ir  foo.ir  for_continue_break.ir  gcd.ir  integer_literal2.ir  negate.ir  return_void.ir  simple.ir  simple_cond.ir  simple_for.ir  sizeof.ir  sizeof2.ir  sizeof4.ir  struct2.ir  switch-in-loop.ir  temp.ir  test.ir  typedef.ir
test/lit/Examples/ir0/: cmp.ir  (+27 more)
test/lit/IRGenTests/: alignof.c  array.c  array2.c  array3.c  array4.c  array5.c  bar.c  bitwise.c  cmp.c  comma.c  complement.c  complete_cond.c  cond.c  cond_and_loop.c  fib2.c  fib3.c  fib4.c  fib5.c  fibonacci.c  float.c  float2.c  foo.c  foo2.c  foo3.c  foo4.c  for_continue_break.c  gcd.c  hex.c  integer_literal.c  integer_literal2.c  logical_op.c  minus_constant.c  negate.c  pointer.c  return_void.c  shift.c  simple.c  simple_cond.c  simple_for.c  simple_if.c  (+17 more)
test/lit/InterpreterTests/: if.c  logical_shortcut.c  logical_shortcut2.c  simple.c
test/lit/ParserTests/: alignof.ir  array.ir  array2.ir  array3.ir  array4.ir  array5.ir  bar.ir  bitwise.ir  block_comment.ir  block_comment2.ir  block_comment3.ir  cmp.ir  comma.ir  complement.ir  complete_cond.ir  cond.ir  cond_and_loop.ir  fib2.ir  fib3.ir  fib4.ir  fib5.ir  fibonacci.ir  float.ir  float2.ir  foo.ir  foo2.ir  foo3.ir  foo4.ir  for_continue_break.ir  gcd.ir  integer_literal.ir  integer_literal2.ir  line_comment.ir  line_comment2.ir  logical_op.ir  minus_constant.ir  negate.ir  pointer.ir  return_void.ir  shift.ir  (+21 more)
test/lit/PassTests/: constant_canonicalize.ir
test/lit/TranslationTests/: interference_graph.ir
test/unittest/: AttrTests.cpp  CMakeLists.txt  ConversionTests.cpp  ModuleTests.cpp  TestTensor.h  TestUtils.h  TypeTests.cpp
test/unittest/asm/: AsmTests.cpp  MoveScheduleTests.cpp  RegisterParserTests.cpp
test/unittest/c/: AST.cpp
test/unittest/ir/: IRTests.cpp  InterpreterTests.cpp  ParserTests.cpp  TestTensor.cpp  TestTensor.h  UsageTests.cpp
tools/: CMakeLists.txt  ExecutorConfig.h.in  driver.cpp  kecc-opt.cpp  kecc-test-executor.cpp  kecc-translate.cpp
tools/executor/: utils.h
utils/llvm-lit/: CMakeLists.txt  llvm-lit.py.in
(+265 files in other folders)
